--- a/css/main.css
+++ b/css/main.css
@@ -2124,29 +2124,44 @@ footer {
 
 .slider__left-item {
   position: absolute;
+  left: 0;
   display: flex;
   flex-flow: column nowrap;
-  margin-left: -23.75rem;
-  margin-top: 1.875rem;
+  justify-content: space-between;
+  height: 31.25rem;
 }
 @media screen and (max-width: 768px) {
   .slider__left-item {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
-    align-content: flex-start;
-    margin-left: 0rem;
-    margin-top: -28.125rem;
+    margin-top: -14.375rem;
+    margin-left: 9.375rem;
   }
 }
 @media screen and (max-width: 480px) {
   .slider__left-item {
+    margin-top: -8.125rem;
     margin-left: 0rem;
-    margin-top: -20.625rem;
   }
 }
 
+@media screen and (max-width: 768px) {
+  .slider__left-calories {
+    margin-left: 17.5rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .slider__left-calories {
+    margin-left: 12.5rem;
+  }
+}
+
+.slider__left-structure {
+  display: flex;
+  flex-direction: row;
+}
 .slider__structure {
   display: flex;
   flex-flow: column nowrap;
@@ -2154,20 +2169,8 @@ footer {
   background-color: #e34f27;
   border-radius: 0.3125rem;
   text-decoration: none;
-  margin-bottom: 20rem;
   opacity: 60%;
 }
-@media screen and (max-width: 768px) {
-  .slider__structure {
-    margin: 0 18.75rem 0 0;
-  }
-}
-@media screen and (max-width: 480px) {
-  .slider__structure {
-    margin: 0 12.5rem 0 0;
-  }
-}
-
 .slider__structure:hover {
   background-color: #e34f27;
   opacity: 100%;
@@ -2249,22 +2252,13 @@ footer {
   position: absolute;
   flex-flow: column nowrap;
   padding: 1.5625rem;
-  margin-left: -11.875rem;
-  margin-top: -1.875rem;
+  margin-left: 5.625rem;
 }
 @media screen and (max-width: 768px) {
   .slider__composition {
-    margin-top: -19.375rem;
-    margin-left: 0rem;
+    margin-left: 5.625rem;
   }
 }
-@media screen and (max-width: 480px) {
-  .slider__composition {
-    margin-top: -12.0625rem;
-    margin-left: 3.125rem;
-  }
-}
-
 .slider__composition-item {
   display: flex;
   align-items: center;
@@ -2285,4 +2279,35 @@ footer {
 
 .slider__composition-size {
   text-align: right;
+}
+
+.slider__composition-btn {
+  fill: #ff3d3d;
+  width: 0.9375rem;
+  height: 0.9375rem;
+  display: block;
+  position: absolute;
+  right: 1.25rem;
+  opacity: 0.7;
+  transition: 0.3s;
+}
+.slider__composition-btn:hover {
+  opacity: 1;
+}
+.slider__composition-btn svg {
+  width: 100%;
+  height: 100%;
+}
+
+.slider__composition-close {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .slider__composition-close {
+    display: flex;
+  }
+}
+
+.slider__left-structure:hover .slider__composition {
+  display: flex;
 }
